--- a/IRCBot/IRCBot.csproj
+++ b/IRCBot/IRCBot.csproj
@@ -41,12 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-		<Compile Include="Plugins\Consay.cs" />
+    <Compile Include="Plugins\Consay.cs" />
     <Compile Include="Plugins\HelloWorld.cs" />
     <Compile Include="Plugins\Version.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities.cs" />
+    <Compile Include="Plugins\LastFM.cs" />
+    <Compile Include="Plugins\RSXView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
