Debug plugin. User variable. Other small changes.

--- a/IRCBot/IRCBot.csproj
+++ b/IRCBot/IRCBot.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Utilities.cs" />
     <Compile Include="Plugins\LastFM.cs" />
     <Compile Include="Plugins\RSXView.cs" />
+    <Compile Include="Plugins\Debug.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
