--- a/IRCBot/IRCBot.csproj
+++ b/IRCBot/IRCBot.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DuckDuckGo">
+      <HintPath>..\packages\DuckDuckGo.Net.1.0.1\lib\DuckDuckGo.dll</HintPath>
+    </Reference>
     <Reference Include="lastfm-sharp, Version=0.1.10.39897, Culture=neutral, PublicKeyToken=ac974b34236b3339, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\tmp\lastfm-sharp-0.1.10-bin\lastfm-sharp.dll</HintPath>
@@ -39,8 +42,12 @@
     <Reference Include="Lpfm.LastFmScrobbler">
       <HintPath>..\packages\Lpfm.LastFmScrobbler.dll.1.3.0\lib\net40\Lpfm.LastFmScrobbler.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\DuckDuckGo.Net.1.0.1\lib\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GlobalVar.cs" />
+    <Compile Include="Plugins\0click.cs" />
     <Compile Include="Plugins\HelloWorld.cs" />
     <Compile Include="Plugins\Version.cs" />
     <Compile Include="Program.cs" />
