--- a/IRCBot/packages.config
+++ b/IRCBot/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="DuckDuckGo.Net" version="1.0.1" targetFramework="net45" />
   <package id="Lpfm.LastFmScrobbler.dll" version="1.3.0" targetFramework="net45" />
+  <package id="SSH.NET" version="2013.4.7" targetFramework="net45" />
 </packages>
