--- a/IRCBot/Sharpie.csproj
+++ b/IRCBot/Sharpie.csproj
@@ -57,8 +57,9 @@
     <Reference Include="Lpfm.LastFmScrobbler">
       <HintPath>..\packages\Lpfm.LastFmScrobbler.dll.1.3.0\lib\net40\Lpfm.LastFmScrobbler.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\DuckDuckGo.Net.1.0.1\lib\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.6.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Renci.SshNet">
       <HintPath>..\packages\SSH.NET.2013.4.7\lib\net40\Renci.SshNet.dll</HintPath>
@@ -80,6 +81,8 @@
   <ItemGroup>
     <Compile Include="GlobalVar.cs" />
     <Compile Include="Plugins\0click.cs" />
+    <Compile Include="Plugins\About.cs" />
+    <Compile Include="Plugins\PornMD.cs" />
     <Compile Include="Plugins\ZNC.cs" />
     <Compile Include="Plugins\HelloWorld.cs" />
     <Compile Include="Plugins\Quack.cs" />
