Config changes. Other stuffs.

--- a/misc/config.cfg.example
+++ b/misc/config.cfg.example
@@ -1,5 +1,7 @@
 [Main]
 AppName = Sharpie
+AdminUser = Me
+OSName =
 
 
 [Connection]
@@ -8,10 +10,6 @@ Port = 6667
 Nick = Sharpie
 Channel = test
 Password = 
-
-
-[Admin]
-AdminUser = Me
 
 
 [LastFM]
